"Neo Alkahouse" by BananaLizard, new alternate theme that plays during the raveyard
"Boneyard Fo Real" by BananaLizard, plays in the swampy cemetery at night
"Hollow's Eve" by BananaLizard, new town day theme that plays while in any habitable spooky mod biome
"Hallow's Ween" by BananaLizard, new town night theme that plays while in any habitable spooky mod biome


Other Random Additions:

-Spooky mod biomes now actually increase the little progress bar during worldgen to show that they are generating, this way the game doesnt just look like its frozen
-Added placeable spooky forest grass walls, cemetery grass walls, and spider grotto grass walls that are sold by the dryad for 10 copper each (like vanilla grass walls)
-Added spooky dirt walls, swampy mud walls, and damp soil walls. These walls now generate in their respective biomes, and have safe versions you can craft and build with
-Added unsafe catacomb walls that can be obtained by shimmering regular catacomb walls after that respective catacomb layers boss is defeated (daffodil for layer 1 bricks, big bone for layer 2 bricks) (IMPORTANT NOTE: if you place these unsafe walls in a world where daffodil (For layer 1 walls) and big bone (For layer 2 walls) haven't been defeated, then you will NOT be able to break them until you defeat that respective boss!)
-Added new blue and yellow glowshroom blocks, walls, and furniture sets
-Added a couple new accessories to the underground spooky forest cabin chests, one for melee and one for ranged
-Added new raveyard music boxes for the individual tracks "Graveyard without the G" and "Neo Alkahouse"
-Added cranberry jelly and cranberry juice, functionally identical to healing potions except they auto consume when you fall below half hp and have halved potion sickness time, but heal about half the health of vanilla healing potions
-The new cranberry jelly (pre-hardmode) and cranberry juice (hardmode) now drop from all spooky mod bosses in place of regular healing potions