@@ -32,5 +32,5 @@ ChristmasDungeon: Tapioca Motel
 ZombieOcean: Where Divers Don't Dare
 SpookFishron: Bad Sushi
 SpookyTownDay: Hollow's Eve
-SpookyTownNight: Hallow's Ween
+SpookyTownNight: Hollow's Ween
 TurkeyTime: Turkey Time
